[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/floor2.gd" type="Script" id=1]
[ext_resource path="res://Sprites/placeholder.jpeg" type="Texture" id=2]
[ext_resource path="res://Sprites/building.png" type="Texture" id=3]
[ext_resource path="res://Scenes/left_elevator.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/right_elevator.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/floor.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/escalator_half_right.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/escalator_full_left.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/escalator_full_right.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/player2.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/player1.tscn" type="PackedScene" id=11]
[ext_resource path="res://Sprites/main_door.png" type="Texture" id=12]
[ext_resource path="res://Scenes/door.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 450 )

[node name="floor_2" type="Node2D"]
script = ExtResource( 1 )

[node name="sky" type="Sprite" parent="."]
self_modulate = Color( 0.717647, 0.968627, 0.980392, 1 )
scale = Vector2( 0.702061, 0.358242 )
texture = ExtResource( 2 )
centered = false

[node name="building" type="Sprite" parent="."]
self_modulate = Color( 0.690196, 0.690196, 0.690196, 1 )
position = Vector2( 960, 540 )
texture = ExtResource( 3 )

[node name="left_wall" type="StaticBody2D" parent="building"]

[node name="left_wall_box" type="CollisionShape2D" parent="building/left_wall"]
position = Vector2( -510, 80 )
shape = SubResource( 1 )

[node name="right_wall" type="StaticBody2D" parent="building"]

[node name="right_wall_box" type="CollisionShape2D" parent="building/right_wall"]
position = Vector2( 510, 80 )
shape = SubResource( 1 )

[node name="left_elevator" parent="." instance=ExtResource( 4 )]
position = Vector2( 410, 1010 )

[node name="right_elevator" parent="." instance=ExtResource( 5 )]
position = Vector2( 1510, 1010 )

[node name="floor" parent="." instance=ExtResource( 6 )]
position = Vector2( 960, 1070 )

[node name="floor2" parent="." instance=ExtResource( 6 )]
position = Vector2( 960, 970 )

[node name="floor3" parent="." instance=ExtResource( 6 )]
position = Vector2( 960, 870 )

[node name="floor4" parent="." instance=ExtResource( 6 )]
position = Vector2( 960, 770 )

[node name="floor5" parent="." instance=ExtResource( 6 )]
position = Vector2( 960, 670 )

[node name="floor6" parent="." instance=ExtResource( 6 )]
position = Vector2( 960, 570 )

[node name="floor7" parent="." instance=ExtResource( 6 )]
position = Vector2( 960, 470 )

[node name="floor8" parent="." instance=ExtResource( 6 )]
position = Vector2( 960, 370 )

[node name="floor9" parent="." instance=ExtResource( 6 )]
position = Vector2( 960, 270 )

[node name="floor10" parent="." instance=ExtResource( 6 )]
position = Vector2( 960, 170 )

[node name="escalator_half_right" parent="." instance=ExtResource( 7 )]
position = Vector2( 860, 780 )

[node name="escalator_half_right2" parent="." instance=ExtResource( 7 )]
position = Vector2( 500, 280 )

[node name="escalator_full_left" parent="." instance=ExtResource( 8 )]
position = Vector2( 460, 480 )

[node name="escalator_full_right3" parent="." instance=ExtResource( 9 )]
position = Vector2( 460, 680 )

[node name="escalator_full_left2" parent="." instance=ExtResource( 8 )]
position = Vector2( 460, 880 )

[node name="escalator_full_right" parent="." instance=ExtResource( 9 )]
position = Vector2( 460, 1080 )

[node name="player2" parent="." instance=ExtResource( 10 )]
position = Vector2( 1044.96, 1047.96 )

[node name="player1" parent="." instance=ExtResource( 11 )]
position = Vector2( 930.15, 1049.14 )

[node name="front_door" type="Sprite" parent="."]
position = Vector2( 960, 1029 )
texture = ExtResource( 12 )

[node name="door" parent="." instance=ExtResource( 13 )]
position = Vector2( 1359.13, 1054.23 )

[node name="door2" parent="." instance=ExtResource( 13 )]
position = Vector2( 1268.49, 1059.27 )

[node name="door3" parent="." instance=ExtResource( 13 )]
position = Vector2( 1379.27, 956.05 )
